[metadata]
name = ptprobe-client
version = 0.1.0
author = xdylanm
description = A client for controlling and reading sensor data from the PT Probe board
long_description = file: README.md
long_description_content_type = text/markdown
license_files = ../LICENSE
url = https://github.com/xdylanm/ptprobe
classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir = 
  = src
packages = find:
python_requires = >=3.6
install_requires =
  serial
  struct

[options.packages.find]
where = src
